KOGITO-6458: Add integration test to verify configuration property "quarkus.openapi-generator.codegen.default.security.scheme"